@@ -1,1 +1,4 @@
 ## Spark Jobs
+
+add below to java runtime
+--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
